@@ -1375,19 +1375,19 @@ No. & Reaction\tnote{(b)} & Forward          & Backward    & $A$, $\textrm{cm}^3
  \cmidrule(lr){3-6}\cmidrule(lr){7-10}
 \multicolumn{2}{c}{Reaction} & $T$ & $A$ & $n$ & $E$ & $T$  & $A$ & $n$ & $E$ \\ 
 \midrule
-1 & $\rm N_2 + M_1 \rightleftarrows N + N + M_1$ & $T$   & 3.0 $\cdot$ 10$^{22}$  & $-1.6$ & $113200 \, R$  & $T$ &\multicolumn{3}{c}{Equilibrium constant} \\
+1 & $\rm N_2 + M_1 \rightleftarrows N + N + M_1$ & $\sqrt{TT_{\rm v}}$   & 3.0 $\cdot$ 10$^{22}$  & $-1.6$ & $113200 \, R$  & $T$ &\multicolumn{3}{c}{Equilibrium constant} \\
 
-2 & $\rm N_2 + M_2 \rightleftarrows N + N + M_2$ & $T$  & 7.0 $\cdot$ 10$^{21}$  & $-1.6$ & $113200 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant}  \\
+2 & $\rm N_2 + M_2 \rightleftarrows N + N + M_2$ & $\sqrt{TT_{\rm v}}$  & 7.0 $\cdot$ 10$^{21}$  & $-1.6$ & $113200 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant}  \\
 
 3 & $\rm N_2 + e^- \rightleftarrows N + N + e^-$ & $T_{\rm e}$ & 3.0 $\cdot$ 10$^{24}$  & $-1.6$ & $113200 \, R$ & $T_{\rm e}$ & \multicolumn{3}{c}{Equilibrium constant} \\
 
-4 & $\rm O_2 + M_1 \rightleftarrows O + O + M_1$ & $T$  & 1.0 $\cdot$ 10$^{22}$  & $-1.5$ & $59500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant} \\
+4 & $\rm O_2 + M_1 \rightleftarrows O + O + M_1$ & $\sqrt{TT_{\rm v}}$  & 1.0 $\cdot$ 10$^{22}$  & $-1.5$ & $59500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant} \\
 
-5 & $\rm O_2 + M_2 \rightleftarrows O + O + M_2$ & $T$  & 2.0 $\cdot$ 10$^{21}$  & $-1.5$ & $59500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant} \\
+5 & $\rm O_2 + M_2 \rightleftarrows O + O + M_2$ & $\sqrt{TT_{\rm v}}$  & 2.0 $\cdot$ 10$^{21}$  & $-1.5$ & $59500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant} \\
 
-6 & $\rm NO + M_3 \rightleftarrows N + O + M_3$ & $T$  & 1.1 $\cdot$ 10$^{17}$  & 0.0 & $75500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant} \\
+6 & $\rm NO + M_3 \rightleftarrows N + O + M_3$ & $\sqrt{TT_{\rm v}}$  & 1.1 $\cdot$ 10$^{17}$  & 0.0 & $75500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant} \\
 
-7 & $\rm NO + M_4 \rightleftarrows N + O + M_4$ & $T$  & 5.0 $\cdot$ 10$^{15}$  & 0.0 & $75500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant}  \\
+7 & $\rm NO + M_4 \rightleftarrows N + O + M_4$ & $\sqrt{TT_{\rm v}}$  & 5.0 $\cdot$ 10$^{15}$  & 0.0 & $75500 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant}  \\
 
 8 & $\rm NO + O \rightleftarrows N + O_2 $ & $T$  & 8.4 $\cdot$ 10$^{12}$  & 0.0 & $19400 \, R$ & $T$ & \multicolumn{3}{c}{Equilibrium constant}  \\
 
